@@ -1,7 +1,7 @@
 # -*- coding:utf-8 -*-
 
 
-__version__ = "0.2.2"
+__version__ = "0.2.2.b2"
 
 
 import os
