@@ -6,8 +6,9 @@
 
 
 class Config(dict):
-    """Works like dict but provides methods to get attribute by '.',
-    such as:
+    """Works like dict but provides methods to get attribute by '.'.
+
+    such as::
         config = Config({'foo': foo, 'bar': bar})
         print config.foo
         config.bar = bar2
