@@ -8,17 +8,21 @@ import collections
 from functools import wraps
 from .globals import g, GLOBAL_NS
 
+
+# ordered dict for cli routes
+#   key: cli name with namespace
+#   value: { handler, help_str, translate_or_not }
 g.routes = collections.OrderedDict()
 
 
-def register(cmd, help="", trans=False, to=GLOBAL_NS):
+def register(cmd, help="", trans=False, ns=GLOBAL_NS):
     """register command to minimo application interface."""
 
     def decorator(f):
         @wraps(f)
         def decorated_func(*args, **kwargs):
             return f(*args, **kwargs)
-        g.routes["{}:{}".format(to, cmd)] = {
+        g.routes["{}:{}".format(ns, cmd)] = {
             "handler": f.__name__,
             "help": help,
             "trans": trans
