@@ -3,8 +3,8 @@
 #
 
 # package-name==package-version
-Flask==0.12.2
-SQLAlchemy==1.1.15
-alembic==0.9.6
-Flask-SQLAlchemy==2.3.2
-PyYaml==3.12
+Flask>=0.12.2
+SQLAlchemy>=1.1.15
+alembic>=0.9.6
+Flask-SQLAlchemy>=2.3.2
+PyYaml>=3.12
