@@ -1,1 +1,0 @@
-pegasus/dev/giraffe-py/trunk
