@@ -1,7 +1,6 @@
 <%!
     import minimo.filters as flt
-%>
-# -*- coding:utf-8 -*-
+%># -*- coding:utf-8 -*-
 
 
 import os
